2010-04-28  Sancho Lerena <slerena@artica.es>

    * include/pChart/pData.class,
    include/pChart/pChart.class: Fixed some notices on undefined variables.

    * include/fgraph.php: Fixed bug with eventgraph in graph_event_module().

    * include/functions.php: return_graphtype() uses now the log4x id 24 in
    ttipo_modulo, fixing the problem in graph visualizer. Anyway, log4x graphs
    doesn't work on php >= 5.3.x :((

    * operation/agentes/estado_monitores.php: Fixed id (24) for link in log4x.

    * operation/agentes/stat_win.php: Included missing functions_reporting.php
    include, it was missing.

2010-04-28  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_html.php: Added at print_checkbox
	function the 'script' parameter

2010-04-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: in function
	"get_agents_detailed_event_reporting" fixed param for $id_agents to array
	type, fixed the loop to save events and fixed in the loop to make the table.
	Added the function "get_module_detailed_event_reporting" for events of any
	module. In function "render_report_html_item" remove trace function, added
	the render option "event_report_module" for render list of events of any
	module.

	* include/functions_db.php: added function "get_module_events".
	
	* operation/gis_maps/ajax.php: cleaned source code.

2010-04-27  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_db.php
	operation/gis_maps/ajax.php
	godmode/agentes/planned_downtime.php
	godmode/agentes/manage_config_remote.php: Fixed many all group
	control from 1 to 0 value. Remove deprecated functions
	list_group() and list_group2() from functions_db.php

2010-04-27 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: added render html for "text" and "sql"
	item.
	
	* include/ajax/reporting.ajax.php: added request for the custom SQL.

	* include/functions_db.php: in function "get_db_value_filter" fixed the